# esp-dlang

./: .gitignore  Dockerfile  README.md  build-ldc.sh  build-llvm.sh  build-toolchain.sh  dbuild.sh  dflags.py  list_idf_include_paths.py  release.sh  wokwi.toml
examples/example/main/: CMakeLists.txt  dub.sdl
examples/example/main/source/: app.d
examples/vga/main/: CMakeLists.txt  dub.sdl  extras.c
examples/vga/main/source/: app.d  object.d
examples/vga/main/source/app/: color.d  i2s_manager.d  main.d  util.d  vga.d  video_timings.d
examples/vga/main/source/idf/esp_driver_gpio/gpio/: idf_esp_driver_gpio_gpio_c_code.c  package.d
examples/vga/main/source/idf/esp_rom/gpio/: idf_esp_rom_gpio_c_code.c  package.d
examples/vga/main/source/idf/esp_rom/lldesc/: idf_esp_rom_lldesc_c_code.c
examples/vga/main/source/idf/hal/gpio_types/: package.d  (+1 more)
examples/vga/main/source/idf/stdlib/: package.d
examples/vga/main/source/idfd/: util.d
examples/vga/main/source/idfd/signalio/: router.d
examples/vga/main/views/: zeus.raw
examples/vga_d_min/main/: CMakeLists.txt  dub.sdl
examples/vga_d_min/main/source/: i2s_c_code.c  object.d
examples/vga_d_min/main/source/app/: color.d  dma_descriptor_ring.d  framebuffer.d  main.d  util.d  video_timings.d
examples/vga_d_min/main/source/app/i2s/: i2s.d  package.d
examples/vga_d_min/main/source/idf/freertos/: package.d
examples/vga_d_min/main/source/idf/stdio/: package.d
examples/vga_d_min/main/source/idfd/: util.d
examples/vga_d_min/main/source/idfd/signalio/: gpio.d  i2s.d  package.d  router.d  signal.d
examples/vga_d_min/main/views/: zeus_gen.sh
examples/wifi/main/: CMakeLists.txt
examples/wifi/main/source/: object.d
examples/wifi/main/source/app/: main.d
examples/wifi/main/source/idf/esp_event/: idf_esp_event_c_code.c  package.d
examples/wifi/main/source/idf/esp_wifi/: idf_esp_wifi_c_code.c  package.d
examples/wifi/main/source/idf/freertos/: idf_freertos_c_code.c  package.d
examples/wifi/main/source/idf/nvs_flash/: idf_nvs_flash_c_code.c  package.d
examples/wifi/main/source/idf/stdlib/: package.d
examples/wifi/main/source/idfd/: nvs_flash.d  tcp.c  util.d  wifi_client.d
(+224 files in other folders)
